# websockets

./: .appveyor.yml  .gitignore  .readthedocs.yaml  .readthedocs.yml  .travis.yml  LICENSE  MANIFEST.in  Makefile  README.rst  SECURITY.md  appveyor.yml  circle.yml  index.html  pyproject.toml  repro.py  requirements.txt  setup.cfg  setup.py  test-iteration.py  tox.ini
.circleci/: config.yml
.clusterfuzzlite/: Dockerfile  build.sh
.github/ISSUE_TEMPLATE/: issue.md
.github/workflows/: cflite_pr.yml  cifuzz.yml  codeql-analysis.yml  release.yml  tests.yml  wheels.yml
benchmark/: compression.py  mem_client.py  mem_server.py
compliance/: README  README.rst  fuzzingclient.json  fuzzingserver.json  test_client.py  test_server.py
compliance/asyncio/: client.py  server.py
compliance/config/: fuzzingclient.json  fuzzingserver.json
compliance/sync/: client.py  server.py
docs/: Makefile  api.rst  changelog.rst  cheatsheet.rst  conf.py  contributing.rst  deployment.rst  design.rst  extensions.rst  faq.rst  heroku.rst  index.rst  intro.rst  lifecycle.graffle  limitations.rst  protocol.graffle  requirements.txt  security.rst  spelling_wordlist.txt
docs/api/: client.rst  extensions.rst  index.rst  server.rst
docs/deploy/: fly.rst  haproxy.rst  heroku.rst  index.rst  koyeb.rst  kubernetes.rst  nginx.rst  render.rst  supervisor.rst
docs/faq/: asyncio.rst  client.rst  common.rst  index.rst  misc.rst  server.rst
docs/howto/: autoreload.rst  cheatsheet.rst  compression.rst  debugging.rst  deployment.rst  django.rst  encryption.rst  extensions.rst  faq.rst  fly.rst  haproxy.rst  heroku.rst  index.rst  koyeb.rst  kubernetes.rst  logging.rst  nginx.rst  patterns.rst  quickstart.rst  render.rst  sansio.rst  supervisor.rst  upgrade.rst
docs/intro/: examples.rst  index.rst  quickstart.rst  tutorial1.rst  tutorial2.rst  tutorial3.rst
docs/project/: changelog.rst  contributing.rst  index.rst  license.rst  sponsoring.rst  support.rst
docs/reference/: client.rst  common.rst  datastructures.rst  exceptions.rst  extensions.rst  features.rst  index.rst  limitations.rst  server.rst  types.rst  utilities.rst  variables.rst
docs/topics/: authentication.rst  broadcast.rst  compression.rst  deployment.rst  design.rst  index.rst  keepalive.rst  logging.rst  memory.rst  performance.rst  proxies.rst  routing.rst  security.rst  timeouts.rst
example/: basic_auth_server.py  broadcast_client.py  broadcast_server.py  client.py  client35.py  client_reqid.py  counter.py  echo.py  health_check_server.py  hello.py  old_client.py  old_server.py  oldclient.py  oldshutdown.py  routing.py  ruff.toml  secure_client.py  secure_server.py  send_time.py  sendtime.py  server.py  server_reqid.py  show_time.py  shutdown.py  shutdown_client.py  shutdown_server.py  ssl_server.py  time.py  unix_client.py  unix_server.py
example/asyncio/: client.py  echo.py  hello.py  server.py
example/chat_system/: client.py  server.py
example/django/: authentication.py  notifications.py  signals.py
example/faq/: health_check_server.py  shutdown_client.py  shutdown_server.py
example/legacy/: basic_auth_client.py  basic_auth_server.py  unix_client.py  unix_server.py
example/logging/: json_log_formatter.py
example/quick/: client.py  counter.py  show_time.py  sync_time.py
example/quickstart/: client.py  client_secure.py  counter.py  server.py  server_secure.py  show_time.py  show_time_2.py
example/sync/: client.py  echo.py  hello.py  server.py
example/tls/: client.py  server.py
example/trio/: client.py  echo.py  hello.py  server.py
experiments/: json_log_formatter.py
experiments/authentication/: app.py  cookie.js  cookie_iframe.js  script.js  test.js  user_info.js
experiments/broadcast/: clients.py  server.py
experiments/compression/: benchmark.py  client.py  corpus.py  server.py
experiments/optimization/: parse_frames.py  parse_handshake.py
experiments/profiling/: compression.py
fuzzing/: fuzz_http11_request_parser.py  fuzz_http11_response_parser.py  fuzz_websocket_parser.py
logo/: github-social-preview.html
performance/: mem_client.py  mem_server.py
src/websockets/: __init__.py  __main__.py  _format_close.py  asyncio_client.py  asyncio_server.py  auth.py  cli.py  client.py  compatibility.py  connection.py  datastructures.py  events.py  exceptions.py  frames.py  framing.py  handshake.py  handshake_legacy.py  headers.py  http.py  http11.py  http_legacy.py  imports.py  protocol.py  server.py  speedups.c  streams.py  typing.py  uri.py  utils.py  version.py
ssl/: ca.pem  localhost.key  localhost.pem  otherhost.key  otherhost.pem
tests/: __init__.py  helpers.py  maxi_cov.py  proxy.py  requirements.txt  test_asyncio_client_server.py  test_auth.py  test_cli.py  test_client.py  test_client_server.py  test_connection.py  test_datastructures.py  test_exceptions.py  test_exports.py  test_frame_str_unicode.py  test_frames.py  test_framing.py  test_handshake.py  test_handshake_legacy.py  test_headers.py  test_http.py  test_http11.py  test_http_legacy.py  test_imports.py  test_localhost.cnf  test_localhost.pem  test_protocol.py  test_proxy.py  test_server.py  test_streams.py  test_typing.py  test_uri.py  test_utils.py  utils.py
tests/asyncio/: client.py  connection.py  server.py  test_client.py  test_connection.py  test_messages.py  test_router.py  test_server.py  utils.py
tests/extensions/: test_base.py  test_permessage_deflate.py  utils.py
tests/legacy/: __init__.py  test_auth.py  test_client_server.py  test_exceptions.py  test_framing.py  test_http.py  test_protocol.py  utils.py
tests/py35/: _test_client_server.py
tests/py36/: _test_client_server.py
websockets/: __init__.py  __main__.py  client.py  compatibility.py  exceptions.py  extensions.py  framing.py  handshake.py  headers.py  http.py  protocol.py  protocols.py  py35_test_client_server.py  python35.py  server.py  speedups.c  test_client_server.py  test_exceptions.py  test_extensions.py  test_framing.py  test_handshake.py  test_headers.py  test_http.py  test_protocol.py  test_uri.py  test_utils.py  uri.py  version.py
(+100 files in other folders)
