[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "websockets"
description = "An implementation of the WebSocket Protocol (RFC 6455 & 7692)"
requires-python = ">=3.7"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "Aymeric Augustin", email = "aymeric.augustin@m4x.org" },
]
keywords = ["WebSocket"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["version", "readme"]

[project.urls]
homepage = "https://github.com/aaugustin/websockets"
changelog = "https://websockets.readthedocs.io/en/stable/project/changelog.html"
documentation = "https://websockets.readthedocs.io/"
funding = "https://tidelift.com/subscription/pkg/pypi-websockets?utm_source=pypi-websockets&utm_medium=referral&utm_campaign=readme"
tracker = "https://github.com/aaugustin/websockets/issues"

[tool.coverage.run]
branch = true
omit = [
    # */websockets matches src/websockets and .tox/**/site-packages/websockets
    "*/websockets/__main__.py",
    "*/websockets/legacy/async_timeout.py",
    "*/websockets/legacy/compatibility.py",
    "tests/maxi_cov.py",
]

[tool.coverage.paths]
source = [
    "src/websockets",
   ".tox/*/lib/python*/site-packages/websockets",
]

[tool.coverage.report]
exclude_lines = [
    "except ImportError:",
    "if self.debug:",
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
    "self.fail\\(\".*\"\\)",
    "@unittest.skip",
]

[tool.ruff]
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "W",  # pycodestyle
    "I",  # isort
]
ignore = [
    "F403",
    "F405",
]

[tool.ruff.isort]
combine-as-imports = true
lines-after-imports = 2
