[metadata]
license_file = LICENSE
name = websockets
author = Aymeric Augustin
author_email = aymeric.augustin@m4x.org
license = BSD
description = An implementation of the WebSocket Protocol (RFC 6455 & 7692)
url = https://github.com/aaugustin/websockets
long_description = file: README.rst
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8


[options]
packages = websockets, websockets/extensions
zip_safe = False
include_package_data = True
python_requires = >=3.6.1
test_loader = unittest:TestLoader
package_dir =
    = src

[options.package_data]
websockets = py.typed

[bdist_wheel]
python-tag = py36.py37


[flake8]
ignore = E731,F403,F405,W503
max-line-length = 88

[isort]
combine_as_imports = True
force_grid_wrap = 0
include_trailing_comma = True
known_standard_library = asyncio
line_length = 88
lines_after_imports = 2
multi_line_output = 3

[coverage:run]
branch = True
omit = */__main__.py
source =
    websockets
    tests

[coverage:paths]
source =
    src/websockets
    .tox/*/lib/python*/site-packages/websockets
