[bdist_wheel]
python-tag = py36.py37.py38.py39

[metadata]
license_file = LICENSE

[flake8]
ignore = E203,E731,F403,F405,W503
max-line-length = 88

[isort]
profile = black
combine_as_imports = True
lines_after_imports = 2

[coverage:run]
branch = True
omit = */__main__.py
source =
    websockets
    tests

[coverage:paths]
source =
    src/websockets
   .tox/*/lib/python*/site-packages/websockets
