[bdist_wheel]
python-tag = py37.py38.py39.py310

[metadata]
license_file = LICENSE
project_urls =
    Changelog=https://websockets.readthedocs.io/en/stable/changelog.html
    Docs=https://websockets.readthedocs.io/
    Source=https://github.com/aaugustin/websockets/
    Tracker=https://github.com/aaugustin/websockets/issues
    
[flake8]
ignore = E203,E731,F403,F405,W503
max-line-length = 88

[isort]
profile = black
combine_as_imports = True
lines_after_imports = 2

[coverage:run]
branch = True
omit = */__main__.py
source =
    websockets
    tests

[coverage:paths]
source =
    src/websockets
   .tox/*/lib/python*/site-packages/websockets
